# qr-apple-silicon

./: BENCHMARK.md  CMakeLists.txt  QR_Streaming_AMX.metallib  QR_Streaming_AMX_Complete.metal  QR_Streaming_AMX_Reduced.metal  QR_Unblocked.metal  QR_Unblocked.metallib  README.md  qr.h  qr_detail.h  qr_dispatch.mm  qr_streaming_amx.mm  qr_streaming_amx_complete.mm  qr_streaming_amx_reduced.mm  qr_unblocked.mm
tests/: benchmark_qr.cpp
